# mvs-texturing

./: .gitignore  CMakeLists.txt
apps/texrecon/: CMakeLists.txt
elibs/: CMakeLists.txt
libs/tex/: CMakeLists.txt  generate_debug_embeddings.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  local_seam_leveling.cpp  material_lib.cpp  material_lib.h  poisson_blending.cpp  poisson_blending.h  texture_atlas.cpp  texture_atlas.h  texture_patch.cpp  texture_patch.h  texture_view.cpp  texture_view.h
